--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"body-parser": "^1.20.0",
 		"cors": "^2.8.5",
+		"dotenv-safe": "^8.2.0",
 		"express": "^4.18.1",
 		"mariadb": "^3.0.0",
 		"mysql": "^2.18.1"
